--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.gmail.orlandroyd.notasnow"
+        applicationId "com.gmail.orlandroyd.todo"
         minSdk 21
         targetSdk 31
-        versionCode 2
-        versionName "2.0"
+        versionCode 3
+        versionName "3.0"
 
         testInstrumentationRunner "com.gmail.orlandroyd.notasnow.HiltTestRunner"
         vectorDrawables {
