--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gmail.orlandroyd.notasnow">
+    package="com.gmail.orlandroyd.todo">
 
     <application
-        android:name=".NoteApp"
+        android:name="com.gmail.orlandroyd.todo.NoteApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotasNow">
         <activity
-            android:name=".feature_note.presentation.MainActivity"
+            android:name="com.gmail.orlandroyd.todo.feature_note.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.NotasNow.NoActionBar"
