--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gmail.orlandroyd.todo">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name="com.gmail.orlandroyd.todo.NoteApp"
-        android:allowBackup="false"
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NotasNow">
+        android:theme="@style/Theme.NotasNow"
+        tools:targetApi="s">
         <activity
             android:name="com.gmail.orlandroyd.todo.feature_note.presentation.MainActivity"
             android:exported="true"
