--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -8,12 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
 
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - name: Set Up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Set Up Gradle
+        uses: gradle/gradle-build-actions@v2
 
       - name: Run Tests
         run: ./gradlew test
