--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -4,24 +4,18 @@ on: pull_request
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set Up JDK 11
+      - name: set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: gradle
 
-      - name: Set Up Gradle
-        uses: gradle/gradle-build-actions@v2
-
-      - name: Run Tests
-        run: ./gradlew test
-
-      - name: Build Project
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Build app
         run: ./gradlew assemble
