--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -15,7 +15,14 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
+      - name: Run test
+        run: ./gradlew test
+
       - name: Build app
         run: ./gradlew assemble
