--- a/.github/workflows/android_test.yml
+++ b/.github/workflows/android_test.yml
@@ -1,6 +1,6 @@
-name: Android Build
+name: Android Test
 
-on: pull_request
+on: [ push ]
 
 jobs:
   build:
@@ -18,8 +18,9 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Unit Test
+        run: ./gradlew testDebugUnitTest
 
-      - name: Build app
-        run: ./gradlew assemble
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }}
