--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,9 @@ kotlin.code.style=official
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+
+systemProp.sonar.sources=./src/main
+systemProp.sonar.host.url=https://sonarcloud.io/
+systemProp.sonar.organization=OrlanDroyd
+systemProp.sonar.projectKey=OrlanDroyd_ToDo-Clean-Arch
+systemProp.sonar.projectName=ToDo-Clean-Arch
