--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.2.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.48'
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
