--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,17 @@ buildscript {
         google()
         mavenCentral()
         maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
         }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.48'
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.4.1.3373"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
