--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,6 @@ android.nonFinalResIds=false
 
 systemProp.sonar.sources=./src/main
 systemProp.sonar.host.url=https://sonarcloud.io/
-systemProp.sonar.organization=OrlanDroyd
-systemProp.sonar.projectKey=OrlanDroyd_ToDo-Clean-Arch
+systemProp.sonar.organization=orlandroyd
+systemProp.sonar.projectKey=orlandroyd_NotasNow
 systemProp.sonar.projectName=ToDo-Clean-Arch
