--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,20 +97,24 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+      #     TODO: REMOVE TASK
+      - name: TASK
+        run: echo TASK
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: SonarCloud Scan
-        run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: gradle
+#
+#      - name: Make gradlew executable
+#        run: chmod +x ./gradlew
+#
+#      - name: SonarCloud Scan
+#        run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   package:
     needs: [static-code-analysis]
