--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,8 +93,9 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-//    testImplementation "io.mockk:mockk:1.13.8"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.5.4"
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation 'app.cash.turbine:turbine:1.0.0'
 
     // Instrumentation tests
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
